--- a/app/styles/components/_footer.scss
+++ b/app/styles/components/_footer.scss
@@ -5,6 +5,10 @@
     margin-top: 3.0em;
     width: 100%;
 
+    .fcol {
+        padding-bottom: 1.5em;
+    }
+
     .fcontent {
         font-size: 85%;
         padding: 1.5em 0 2.0em 0;
